# TFTMuZeroAgent

./: .gitignore  .gitmodules  AI_interface.py  Agents.md  SPARSE_REWARDS_ANSWER.py  benchmark_training.py  config.py  env.yml  free_threading_design.md  global_buffer.py  log_0.txt  main.py  model.md  readme.md  requirements.txt  run_distributed.sh  run_server_distributed.sh  run_tft.sh  run_workers_distributed.sh  sb3_metrics_explained.py  sb3_wrapper.py  setup_repo.py  sparse_reward_solutions.py  test_board_generator_refactor.py  test_muzero_agent.py  test_tft_mcts_integration.py  tft_train.py  tft_wrappers.py  train_parallel.py  train_single.py  training_orchestrator.py
MonteCarloTreeSearch/: .gitignore  CMakeLists.txt  README.md  pytest.ini  run_tests.py  setup.py
MonteCarloTreeSearch/demo/: README.md  connect_four_python.py  demo_pymcts.py  heuristic_rollout_demo.py  simple_python_games.py  working_advanced_demo.py  working_simple_demo.py
MonteCarloTreeSearch/examples/Quoridor/: Quoridor.cpp  Quoridor.h
MonteCarloTreeSearch/examples/TicTacToe/: TicTacToe.cpp  TicTacToe.h
MonteCarloTreeSearch/mcts/include/: mcts.h  state.h
MonteCarloTreeSearch/pybind/: README.md  mcts_python.cpp  mcts_python.h  py_wrappers.cpp  py_wrappers.h  pymcts.cpp
MonteCarloTreeSearch/tests/: README.md  benchmark_mcts.py  conftest.py  test_core.py  test_core_minimal.py  test_cpp_tictactoe.py  test_heuristic_rollouts.py  test_mcts_comprehensive.py  test_mcts_isolated.py  test_parallel.py  test_puct.py  test_python_games.py  test_python_inheritance.py  test_simple_ownership.py
(+128 files in other folders)
